--- a/Pentaho-Containers/K3s/Pentaho-K3s-PostgreSQL/.gitignore
+++ b/Pentaho-Containers/K3s/Pentaho-K3s-PostgreSQL/.gitignore
@@ -1,19 +1,96 @@
-# Secrets (never commit actual secrets)
+# =============================================================================
+# Pentaho K3s PostgreSQL - Git Ignore File
+# =============================================================================
+
+# Secrets - NEVER commit secrets to version control
 manifests/secrets/secrets.yaml
-
-# Backups
-backups/*.sql
-backups/*.sql.gz
-backups/*.tar.gz
-
-# Local config
+manifests/secrets/*.yaml
+*.key
+*.pem
+*.crt
 .env
-*.local
 
-# IDE
+# Backup files
+*.sql
+*.sql.gz
+*.dump
+backup-*.tar
+backup-*.tar.gz
+backups/
+
+# Docker build artifacts
+docker-build/*.tar
+docker-build/pentaho-server-*.zip
+/tmp/
+
+# Logs
+*.log
+logs/
+*.log.*
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE and editor files
 .vscode/
 .idea/
+*.iml
+*.code-workspace
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
 
-# OS
-.DS_Store
-Thumbs.db
+# Python (if using Python scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+.venv
+
+# Node modules (if using JavaScript tools)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Kubernetes generated files
+*.kubeconfig
+
+# Docker Compose overrides
+docker-compose.override.yml
+
+# Test outputs
+test-results/
+coverage/
+
+# Build directories
+build/
+dist/
+target/
+
+# Cache directories
+.cache/
+*.cache
+
+# Personal notes (not for repository)
+NOTES.md
+TODO.md
+.scratch/
